# hcz_road_void_with_tools

./: .gitignore  AGENTS.md  agent.md
code/: main.py  pyproject.toml
code/docs/: ALGORITHM_ASSUMPTIONS.md  DEVITO_3D_ACOUSTIC_BACKEND.md  DEVITO_INTEGRATION_NOTES.md  DEVITO_LINUX_RUNTIME_GUIDE.md  FORWARD_OUTPUTS.md  HANDOFF.md  OPENSWPC_INTEGRATION_NOTES.md  PROJECT_UNDERSTANDING.md  REFERENCE_METHODS.md  STAGE1_FORWARD_PLAN.md  STAGE2_WAVE_EQUATION_FORWARD_PLAN.md  TOOLS_DEEP_DIVE.md  TOOLS_INVENTORY.md  VOID_BODY_MODEL.md
code/hcz_road_void/: __init__.py
code/hcz_road_void/forward/: __init__.py  config.py  kinematic.py  result.py
code/hcz_road_void/geometry/: __init__.py  coordinates.py  scenario.py
code/hcz_road_void/io/: __init__.py  metadata.py
code/hcz_road_void/localization/: __init__.py  energy_stack.py  search_grid.py
code/hcz_road_void/models/: __init__.py  velocity.py  velocity_grid.py  void.py  void_body.py
code/hcz_road_void/receivers/: __init__.py  geometry.py
code/hcz_road_void/uncertainty/: __init__.py  types.py
code/hcz_road_void/visualization/: __init__.py  fonts.py  plots.py  scene.py  (+2 more)
code/notebooks/: road_void_3d_forward_and_localization.ipynb
code/scripts/: build_progress_notebook.py  sync_outputs.py
code/tests/: test_das_receivers.py  test_default_road_scene.py  test_forward_and_localization.py  test_geometry_and_models.py  test_imports.py  test_kinematic_forward.py  test_localization_recovery.py  test_main_smoke.py  test_notebook_readability.py  test_stage2a_wave_equation_transition.py  test_stage2b_devito_backend.py
(+7 files in other folders)
