[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hcz-road-void"
version = "0.1.0"
description = "三维道路地下空洞探测算法原型。"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
